SSR added
SSR added, ng added the app.server files, and the rest were configurations to make the login button component to make it render server side in app.ts. now when the user has a google env vars, the google button is rendered, also proxies it to the api server the requests. In prod, might need to proxy it through nginx. Next we begin seriously with the project, making the callbacks work for the login.
